--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
       font-family: 'Roboto', sans-serif;
       padding: 0;
       margin: 0;
+      background-color: #3399ff;
     }
     h1 
     {
@@ -45,7 +46,6 @@
       border: 3px solid #cccccc;
       padding: 5px;
       font-family: 'Roboto', sans-serif;
-      background-image: url(bg.gif);
       background-position: bottom right;
       background-repeat: no-repeat;
     }
@@ -63,6 +63,9 @@
         </form>
         <form action="/revert" method="get">
               <input type="submit" value="REVERT"> </input>
+        </form>
+        <form action="/history" method="get">
+              <input type="submit" value="MY HISTORY"> </input>
         </form>
     </section>
 </body>
