--- a/templates/censored.html
+++ b/templates/censored.html
@@ -14,7 +14,7 @@
 			}
 			div#text
 			{
-				background-image: url("paper.gif");
+				background-image: url(paper.gif);
 				background-color: #cccccc;
 				font-family: inherit;
 				font-size: 15px;
